# macau

./: .gitignore  Dockerfile  LICENSE  README.md  manage.py  pyproject.toml  renovate.json
.github/workflows/: ci.yml
macau/: admin.py  settings.py  urls.py  wsgi.py
macau/core/static/macau/: admin.css
macau/core/templates/admin/: base.html
macau/redirects/: admin.py  apps.py  models.py  tests.py  urls.py  utils.py  views.py
macau/redirects/migrations/: 0001_initial.py  0002_redirect_basic_auth_password_and_more.py  0003_redirect_is_enabled.py
macau/users/: admin.py  apps.py
